Version 0.0.22 Fixed styles for some android phones of the letter day being too big Fixed the empty calendar bug

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -84,7 +84,7 @@
 	background-color:#ddd;
 	padding:10px;
 	padding-bottom:0px;
-	width:61px;
+	max-width:61px;
 }
 
 #letter {
